--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
+    "@tanstack/react-query": "^5.80.7",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "hoist-non-react-statics": "^3.3.2",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2"
